--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
-\documentclass[12pt,a4paper,oneside]{report}
-\usepackage[spanish]{babel}
+\documentclass[12pt,a4paper,oneside]{article}
+\usepackage[spanish,english]{babel}
 \selectlanguage{spanish}
 \usepackage[T1]{fontenc}
 \usepackage{times}
@@ -25,33 +25,19 @@
 \usepackage{comment}
 \usepackage{pslatex}
 \usepackage{apacite} 
-\usepackage{fixltx2e}
 \usepackage{caption}
-\usepackage{setspace} 
-\captionsetup[table]{skip=10pt}
+\usepackage{setspace}
+\usepackage{imakeidx}
 \bibliographystyle{apacite}
+\makeindex
 \begin{document}
 \renewcommand{\BOthers}[1]{et al.\hbox{}}
 \renewcommand\bibname{Bibliografía}
+
 %----------------------------------------------------------------------------------------
 %	CONFIGURACION
 %----------------------------------------------------------------------------------------
-\marginsize{3.0cm}{3.0cm}{3.0cm}{3.0cm}
-\renewcommand*{\contentsname}{Tabla de contenidos}
-\renewcommand*{\listtablename}{Índice de tablas}
-\renewcommand*{\listfigurename}{Índice de figuras}
-\renewcommand{\baselinestretch}{1.0}
-\renewcommand{\appendixname}{Anexos}
-\renewcommand{\appendixtocname}{Anexos}
-\renewcommand{\appendixpagename}{Anexos}
-\renewcommand{\thetable}{\arabic{chapter}.\arabic{table}}
-\renewcommand*{\tablename}{Tabla}
-\renewcommand*{\chaptername}{Capítulo}
-\renewcommand*{\thechapter}{\Roman{chapter}}
-\renewcommand{\thesection}{\arabic{chapter}.\arabic{section}}
-\renewcommand{\figurename}{Figura}
-\renewcommand{\thefigure}{\arabic{chapter}.\arabic{figure}}
-\renewcommand{\theequation}{\arabic{chapter}.\arabic{equation}}
+\marginsize{2.0cm}{2.0cm}{2.0cm}{2.0cm}
 
 %----------------------------------------------------------------------------------------
 %	Carátula
@@ -65,12 +51,12 @@
   {\Large \bf Escuela Profesional de Ingeniería de Sistemas}\\
  \begin{figure}[H]
     \centering
-    \includegraphics[width=7cm]{imagenes/logo de la catolica.png}
+    \includegraphics[width=7cm]{Logo/logo de la catolica.png}
 \end{figure}
-\title{MEJORA DEL PROCESO DE RESERVACIONES DE RUTAS TURÍSTICAS DE UNA HOTELERA MEDIANTE LA UTILIZACIÓN DE UN CHATBOT} % titulo de tu tesis para latex
+\title{} % titulo de tu tesis para latex
 {\Large \bf }
 \vspace{1cm}
-{\bf DIANTE LA UTILIZACIÓN DE UN CHATBOT}\\[1.0cm]
+{\bf MEJORA DEL PROCESO DE RESERVACIONES DE RUTAS TURÍSTICAS DE UNA HOTELERA MEDIANTE LA IMPLEMENTACIÓN DE UN CHATBOT}\\[1.0cm]
 \begin{flushright}
 {\bf AUTOR}\\[0.5cm]
 {Huanca Paucar Renato Denilzón}\\[0.5cm] % nombres del autor o autores [1.0cm]
@@ -89,89 +75,122 @@
 %----------------------------------------------------------------------------------------
 %	Resumen
 %----------------------------------------------------------------------------------------
+\selectlanguage{spanish}
+\begin{abstract}
+\addcontentsline{toc}{section}{Resumen}
+    Actualmente los sistemas de información pueden brindar un gran apoyo en el proceso de la reserva turística en un entorno hotelero, sin embargo, solo teniendo dichos sistemas aun hace falta personal para que pueda atender dudas o inquietudes que sean muy específicas por parte de los usuarios. Los sistemas de información son las herramientas adecuadas para gestionar y brindar información a los turistas, ya sean nacionales o internacionales, y así satisfacer sus necesidades. El turismo siempre ha sido una de las fuentes de ingresos más importantes para un país o una ciudad, por eso es tan importante contar con una adecuada gestión turística en nuestra ciudad, pues se espera que sea la satisfacción de los turistas. El enfoque de este documento se basa en el aporte de una inteligencia artificial que se encargue del procesamiento del lenguaje natural para que este pueda interactuar con el usuario y lo apoye en todo el ciclo de realización de la reserva turística en el hotel. 
+\end{abstract}
 
-\chapter*{\centering \large Resumen} 
-\addcontentsline{toc}{chapter}{Resumen} % si queremos que aparezca en el índice
-\markboth{Resumen}{Resumen} % encabezado
-{Actualmente los sistemas de informaci ́on pueden brindar un gran apoyo en el proceso de la
-reserva tur ́ıstica en un entorno hotelero, sin embargo, solo teniendo dichos sistemas aun hace falta
-personal para que pueda atender dudas o inquietudes que sean muy espec ́ıficas por parte de los
-usuarios. Los sistemas de informaci ́on son las herramientas adecuadas para gestionar y brindar
-informaci ́on a los turistas, ya sean nacionales o internacionales, y as ́ı satisfacer sus necesidades. El
-turismo siempre ha sido una de las fuentes de ingresos m ́as importantes para un pa ́ıs o una ciudad,
-por eso es tan importante contar con una adecuada gesti ́on tur ́ıstica en nuestra ciudad, pues se
-espera que sea la satisfacci ́on de los turistas. El enfoque de este documento se basa en el aporte
-de una inteligencia artificial que se encargue del procesamiento del lenguaje natural para que este
-pueda interactuar con el usuario y lo apoye en todo el ciclo de realizaci ́on de la reserva tur ́ıstica
-en el hotel.}\\[0.5cm]
-
+\newpage
 
 %----------------------------------------------------------------------------------------
 %	Abstract
 %----------------------------------------------------------------------------------------
 
-\chapter*{\centering \large Abstract} 
-\addcontentsline{toc}{chapter}{Resumen} % si queremos que aparezca en el índice
-\markboth{Resumen}{Resumen} % encabezado
-{Abstract in english}\\[0.5cm]
+\selectlanguage{english}
+\begin{abstract}
+\addcontentsline{toc}{section}{Abstract}
+    Actualmente los sistemas de información pueden brindar un gran apoyo en el proceso de la reserva turística en un entorno hotelero, sin embargo, solo teniendo dichos sistemas aun hace falta personal para que pueda atender dudas o inquietudes que sean muy específicas por parte de los usuarios. Los sistemas de información son las herramientas adecuadas para gestionar y brindar información a los turistas, ya sean nacionales o internacionales, y así satisfacer sus necesidades. El turismo siempre ha sido una de las fuentes de ingresos más importantes para un país o una ciudad, por eso es tan importante contar con una adecuada gestión turística en nuestra ciudad, pues se espera que sea la satisfacción de los turistas. El enfoque de este documento se basa en el aporte de una inteligencia artificial que se encargue del procesamiento del lenguaje natural para que este pueda interactuar con el usuario y lo apoye en todo el ciclo de realización de la reserva turística en el hotel. 
+\end{abstract}
+\selectlanguage{spanish}
+
+\newpage
 
 %----------------------------------------------------------------------------------------
 %	Introducción
 %----------------------------------------------------------------------------------------
-\chapter*{\centering \large Introducción} 
-\addcontentsline{toc}{chapter}{Resumen} % si queremos que aparezca en el índice
-\markboth{Resumen}{Resumen} % encabezado
-{Escribir resumen aquí}\\[0.5cm]
-%----------------------------------------------------------------------------------------
 
-%	TABLA DE CONTENIDOS
-%---------------------------------------------------------------------------------------
-\cleardoublepage
-\addcontentsline{toc}{chapter}{\contentsname}
-\tableofcontents \newpage
-\addcontentsline{toc}{chapter}{\listfigurename}
-\listoffigures \newpage
-\addcontentsline{toc}{chapter}{\listtablename}
-\listoftables \newpage
-\makegloss
+\subsubsection*{\centering Introducción}
+\addcontentsline{toc}{section}{Introducción}
+El gran volumen de archivos dificulta su gestión si no cuenta con la ayuda del software específico que nos ayude. Pero la colaboración entre ingenieros y arquitectos aún es más complicada. Todos trabajan con diferentes archivos e información y, a menudo, ambas partes los actualizan manualmente, lo que es una fuente de errores y una pérdida de tiempo significativa. Al planificar el desarrollo de un proyecto es necesario definir los objetivos, los recursos que se asignan, el marco temporal y una estrategia de actuación. Esta estrategia puede definirse basándose en distintas metodologías ya existentes donde se realizaron una tabla de comparación para ver que metodología se adapta mejor a nuestro proyecto, según las necesidades y bondades del equipo encargado del proyecto.
 \newpage
-\pagenumbering{arabic}
 
 %----------------------------------------------------------------------------------------
-%	Capítulo 1
-%----------------------------------------------------------------------------------------
-\doublespacing
-\chapter{Título de capítulo 1}
-\section{Título de sección}
-\subsection{Título de subsección}
-\subsubsection{Título de subsubsección}
-\begin{spacing}{1.5}
-{Ejemplo de cuerpo y ejemplo de imagen en l \ref{fig:PLACEHOLDER}. }
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.5\textwidth]{imagenes/640x360.png}
-    \caption{Ejemplo de imagen.}
-    \label{fig:PLACEHOLDER}
-\end{figure}
-
-\begin{equation} \label{eq:1}
-    S=\sum_iP_ilog(P_i)
-\end{equation}
-
-
-\end{spacing}
-%----------------------------------------------------------------------------------------
-%	BIBLIOGRAFIA
+%Índice
 %----------------------------------------------------------------------------------------
 
-\bibliography{library}
+\tableofcontents
+\newpage
+
+%----------------------------------------------------------------------------------------
+%Planteamiento del Problema
+%----------------------------------------------------------------------------------------
+\section{PLANTEAMIENTO DE LA INVESTIGACIÓN}
+\subsection{Planteamiento del Problema}
+
+Muchas veces el uso de las tecnologías en nuestras épocas no son siempre la primera opción, debido a que ocurre falta de información sobre cómo la tecnología nos puede ayudar en varios aspectos de una empresa u organización. Actualmente, las empresas hoteleras utilizan métodos de registros poco convencionales y estos pueden presentar problemas tanto logísticos como administrativos donde esto conlleva una mala inversión de tiempo para los empleados de la empresa que se encuentra en la ciudad de Arequipa.   
+Según (Baldoceda Chávez Jean 2017) Una típica libreta o memoria de recepción, puede causar molestias a los clientes que llegan y no encuentran su reserva registrada en el sistema. La recepción de una hotelera tiene que ser acogedora, donde se debe administrarse adecuadamente y debe poder recibir datos de todos los clientes, además de proporcionar la información ingresada para realizar una reserva. Administre con precisión la información de cambios o cancelaciones de reservas para brindar soluciones rápidas y específicas a estas solicitudes. En ella suelen existir confusiones por extravío o extravío de información que no se puede almacenar. También se debe considerar las fechas de llegada y salida del hotel, especialmente en temporada alta cuando hay aviso de cancelación, llegada/salida anticipada y cambio de habitación durante la estancia. Según (Piedra, V., 2016) el problema que nos da a conocer es cómo las empresas hoteleras que no están adaptadas a la tecnología pueden presentar problemas al momento de llamar y realizar una reservación ya que se usa métodos poco convencionales como las libretas donde se coloca los datos de un cliente y estas pueden presentar mala escritura por parte del empleado. El desarrollar un sistema para esta empresa puede exhibir grandes mejoras de alta escalabilidad, ya que puede brindar servicios desde pequeñas empresas con pocos usuarios, hasta empresas con diferentes ubicaciones.  
+Por otro lado (	Solano, M. 2012) los problemas que nos muestra los autores más comunes que se presentan en la sección de reservas suelen ser el almacenamiento de información sobre la habitación, como el tipo de habitación que tiene características comunes que necesitamos saber, así como su ubicación real en la casa. La correcta gestión de las fechas de entrada y salida del hotel es también otro quebradero de cabeza, sobre todo en temporada alta cuando a menudo hay cancelaciones, llegadas y salidas anticipadas, cambios de habitación durante la estancia. Gestionar adecuadamente la información sobre cambios o cancelaciones de reservas, dando soluciones rápidas y específicas a estas solicitudes donde muchas veces surgen confusiones por interrupción o pérdida de información almacenada, más que en la típica libreta o en la memoria del personal de recepción, es más frustrante para los huéspedes que llegan al check-in que sus solicitudes no se han tenido en cuenta.
+
+\subsection{Objetivos de la Investigación}
+\subsubsection{General}
+    Mejorar el Procesos de Reservaciones de Rutas Turísticas mediante el uso de un chatbot.
+\subsubsection{Específicos}
+    \begin{itemize}
+      \item {Estudiar el problema del inadecuado uso de los recursos tecnológicos en el proceso de reservas de habitaciones hoteleras.}
+      \item {Realizar un análisis, diseño y construcción del Sistema.}
+      \item {Desarrollar un sistema Escalable para su implementación.}
+      \item {Validar las pruebas de correcciones de errores, bug y vulnerabilidades.}
+      \item {Implementar un chatbot para la satisfacción del usuario.}
+    \end{itemize}
+\subsection{Preguntas de Investigación}
+    \begin{itemize}
+        \item {¿Cómo mejorar el sistema de reservas turísticas para la empresa hotelera?}
+        \item {¿En qué medida el uso de la tecnología escalable puede influir en la gestión de reserva de la empresa hotelera?}
+        \item {¿Cómo optimizar el flujo de búsqueda para el usuario del sistema de reserva?}
+        \item {¿Cómo mejorar el sistema reportes de reservas en la empresa hotelera?}
+    \end{itemize}
+\subsection{Línea y Sublínea de Investigación a la que corresponde el Problema}
+    Sistema de Información y Bases de Datos 
+    
+    Tiene como objetivo el estudio de modelos, procedimientos, métodos, técnicas y herramientas para la gestión, el desarrollo y la implantación de sistemas de información.
+\subsection{Palabras Clave}
+    Optimización, Tecnología Escalable, Reservaciones Turísticas.
+\subsection{Solución Propuesta}
+\subsubsection{Justificación del Problema}
+    El desarrollo de este trabajo tiene como objetivo potenciar la gestión de reservas de la empresa hotelera, a través de nuevas tendencias tecnológicas desarrolladas, permitiendo así sistematizar y agilizar la operación de reservas, una de las ventajas más importantes. El uso de estas aplicaciones combinadas puede crear, tenemos lo siguiente:
+    
+    \begin{itemize}
+        \item {Incluir un proceso de reserva adicional al proceso tradicional, asegurando una fuente adicional de ingresos y un servicio más completo para estos clientes.}
+        \item {Ofrece horarios flexibles para reservar en cualquier momento.}
+        \item {Tiempo reducido en el proceso de reserva.}
+    \end{itemize}
+
+\subsubsection{Descripción de la Solución}
+
+    Para la solución de este proyecto se plantea el desarrollo de un sistema de información orientado tanto al lado de marketing, realizando una página web para la empresa, como al sistema de reserva, dicho desarrollo se realizará utilizando tecnologías como JavaScript en ES6, HTML5 y CSS3 como lenguajes fundamentales, también se hará uso del framework React JS para el apoyo del apartado de Front-End, luego el uso Node JS para el apartado de Back-End así como MySQL como motor de base de datos. Para esto del motor de base de datos se necesita realizar los modelados, por ende se usará UML. También se emplearán APIs de apoyo como Formik, styled-component, etc para facilitar el desarrollo de funciones básicas dentro del sistema. 
+    Para el apartado de Front-End se orientará el desarrollo a SSR (Side Server Rendering), esto para optimizar en la medida de lo posible el SEO (Search Engine Optimization) y así la página web tenga el mejor impacto en los buscadores web que sea posible.
+
+\subsection{ESTADO DEL ARTE O ESTADO DE LA CUESTIÓN}
+
+    Recientemente en los últimos años la investigación sobre el uso de la implementación de tecnología para las empresas resulta muy beneficiosa ya que se puede optimizar las actividades dentro una empresa. Para esto, en el siguiente estado técnico, se buscó una serie de artículos que contenían mucha información relacionada con el tema de investigación; pero hay poca o ninguna información sobre su aplicación en nuestro país o sobre estudios relacionados con este tema. Luego, se detallará el contexto relacionado con el tema de investigación en otros países, detallando la metodología, implementación y algunas recomendaciones que tienen en su proyecto de investigación.
+
+\begin{itemize}
+  \item Los autores presentan como integrar el aprendizaje por refuerzo profundo para modelar a un chatbot esto con un refuerzo de recompensa futura, se simulan diálogos entre dos agentes virtuales y estos se evalúan por diversidad, longitud y evaluadores humanos para de esta forma demostrar que el algoritmo propuesto es capaz de generar respuestas interactivas y que pueda lograr una conversación sostenida, los modelos presentados en el artículo se tiene en cuenta para el desarrollo del chatbot planteado en nuestro documento.
+\end{itemize}
 
 
 %----------------------------------------------------------------------------------------
-%	Anexos
+%Fundamentos Teóricos
 %----------------------------------------------------------------------------------------
-\appendix
-\renewcommand{\appendixname}{Anexo}%
-\chapter*{\appendixname}
-\phantomsection
-\end{document} 
+\section{Fundamentos Teóricos}
+\subsection{Estado del Arte}
+    Recientemente en los últimos años la investigación sobre el uso de la implementación de tecnología para las empresas resulta muy beneficiosa ya que se puede optimizar las actividades dentro una empresa. Para esto, en el siguiente estado técnico, se buscó una serie de artículos que contenían mucha información relacionada con el tema de investigación; pero hay poca o ninguna información sobre su aplicación en nuestro país o sobre estudios relacionados con este tema. Luego, se detallará el contexto relacionado con el tema de investigación en otros países, detallando la metodología, implementación y algunas recomendaciones que tienen en su proyecto de investigación.
+
+  Los autores presentan como integrar el aprendizaje por refuerzo profundo para modelar a un chatbot esto con un refuerzo de recompensa futura, se simulan diálogos entre dos agentes virtuales y estos se evalúan por diversidad, longitud y evaluadores humanos para de esta forma demostrar que el algoritmo propuesto es capaz de generar respuestas interactivas y que pueda lograr una conversación sostenida, los modelos presentados en el artículo se tiene en cuenta para el desarrollo del chatbot planteado en nuestro documento.
+
+\subsection{Bases Teóricas de la Investigación}
+\begin{itemize}
+  \item Turismo\\
+  Como parte del turismo tenemos a la Organización mundial del Turismo
+(OMT) “El turismo comprende las actividades que realizan las personas
+durante sus viajes y estancias en lugares distintos al de su residencia
+habitual por menos de un año y con fines de ocio, negocios, estudio, entre
+otros”
+\end{itemize}
+%----------------------------------------------------------------------------------------
+%Marco Metodológico
+%----------------------------------------------------------------------------------------
+\section{Marco Metodológicos}
+\subsection{Alcance y Limitaciones}
+\end{document}
